revised style.css

--- a/index.html
+++ b/index.html
@@ -7,6 +7,7 @@
   <link rel="stylesheet" type="text/css" href="./assets/css/style.css" />
   <title>Word Guessing Game</title>
 </head>
+
   <body>
     <header>
       <div class="big-font">Word Guessing Game</div>
@@ -32,7 +33,7 @@
           <div class= "card timer">
             <div class= "timer-text">
             <div class= "big-font timer-counter">10</div>
-            <h3>seconds are remaining</h3>
+            <h3>seconds</h3>
           </div>
       </section>
     </main>
