--- a/index.html
+++ b/index.html
@@ -25,16 +25,19 @@
         <div class="card results">
           <div class = "wins-losses-container">
           <div>
-          <h2>Total Wins: <span class="win">0 </span></h2>
-          <h2>Total Losses: <span class="losses">0 </span></h2>
+          <h2>Total Wins: <span class="win">0</span></h2>
+          <h2>Total Losses: <span class="losses">0</span></h2>
         </div>
           <button class="reset-score-btn">Reset Score</button>
       </div>
           <div class= "card timer">
             <div class= "timer-text">
             <div class= "big-font timer-counter">10</div>
-            <h3>seconds</h3>
+            <h3>seconds remaining</h3>
           </div>
+
+          </div>
+        </div>
       </section>
     </main>
     <script src="script.js"></script>
