--- a/index.html
+++ b/index.html
@@ -40,7 +40,7 @@
       </div>
     </section>
   </main>
-  <script src="./assets/js/script.js"></script>
+  <script src="./assets/script.js"></script>
 </body>
 
 </html>
